objects/UNITY_My_Notification__c.object
<CustomObject>
    <description>Setting object to support UNITY Notifications Console Component.</description>
    <fields>
        <fullName>Push_Notification__c</fullName>
        <description>The push notification this represents</description>
        <label>Push Notification</label>
        <referenceTo>UNITY_Push_Notification__c</referenceTo>
        <relationshipLabel>My Notifications</relationshipLabel>
        <relationshipName>My_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The notification status for the specified user</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Unread</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user the notification setting applies to</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>My_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>My Notification</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>My Notifications Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>